--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  height: 100vh;
+}
+
+.router-container {
+  & > *:not(router-outlet) {
+    height: 100%;
+    flex: 1;
+    padding: 0 1rem;
+  }
+}
